refactor: reduce cognitive complexity in BattleEngine